welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  while (!posfin()) {
    snakeWalk()
  }
}



def posfin():Boolean = {
  if ((getDirection()==Direction.est) && estFaceMur()) {
    gauche()
    if (estFaceMur()) {
      return true
    }
  } else {
    return false
  }
}

def snakeWalk() {
  while (!estFaceMur()) {
    avance()
  }
  if (getDirection()==Direction.est) {
    gauche()
    avance()
    gauche()
    snakeWalk()
  } else {
    droite()
    avance()
    droite()
  }
}